--- a/src/app/pages/taskview/taskview.component.html
+++ b/src/app/pages/taskview/taskview.component.html
@@ -6,17 +6,12 @@
                 Lists
             </h1>
             <div class="list-menu">
-                <a class="list-menu-item">
-                    <p>List1</p>
-                </a>
-                <a class="list-menu-item">
-                    <p>List2</p>
-                </a>
-                <a class="list-menu-item">
-                    <p>List3</p>
+                <a class="list-menu-item" *ngFor="let list of lists" routerLinkActive="is-active" 
+                [routerLink]="['/lists', list._id]">
+                    <p>{{ list.title }}</p>
                 </a>
             </div>
-            <button class="button is-primary has-text-white">
+            <button class="button is-primary has-text-white" routerLink="/newlist">
                 + New List
             </button>
         </div>
@@ -25,31 +20,13 @@
             <h1 class="title has-text-primary">
                 Tasks
             </h1>
-            <div class="task">
-                <p>
-                    you can enter any task
-                </p>
+            <div class="task" *ngFor="let task of tasks">
+                <p>{{ task.title }}</p>
             </div>
-            <div class="task">
-                <p>
-                    you can enter any task
-                </p>
-            </div>
-            <div class="task">
-                <p>
-                    you can enter any task
-                </p>
-            </div>
-            <div class="task complete">
-                <p>
-                    you can enter any task
-                </p>
-            </div>
-            <div class="task complete">
-                <p>
-                    you can enter any task
-                </p>
-            </div>
+
+            <button routerLink="./newtask" class="circle-add-button button is-primary">
+                <img src="../../../assets/plus-icon.svg">
+            </button>
         </div>
     </div>
 </div>
