--- a/src/app/pages/taskview/taskview.component.scss
+++ b/src/app/pages/taskview/taskview.component.scss
@@ -32,6 +32,7 @@
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
     padding: 42px;
+    position: relative;
 }
 
 .title {
@@ -88,4 +89,12 @@
         text-decoration: line-through;
         opacity: 0.8;
     }
+}
+.circle-add-button {
+    height:50px;
+    width: 50px;
+    position: absolute;
+    bottom: 35px;
+    right: 35px;
+    border-radius: 50%;
 }
