--- a/src/main-styles.scss
+++ b/src/main-styles.scss
@@ -2,10 +2,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Nunito:wght@400;700&display=swap');
 
-$torquoise: #44ddd0;
-$green: #27d7a1;
-$light-green: #45f69e;
-$dark-green: rgb(0,100,80);
+$torquoise: #E2A8FE;
+$green: #7E4EAC;
+$light-green: #52307c;
+$dark-green: #3c1361;
 $light: #f8f8f8;
 
 $family-sans-serif: "Nunito", sans-serif;
@@ -23,6 +23,8 @@ html{
 
 html, body{
     height: 100%;
+    overflow: auto;
+    color: royal;
 }
 
 .centered-content {
