removed plus svg added fontawesome kit for icons

--- a/src/app/pages/taskview/taskview.component.html
+++ b/src/app/pages/taskview/taskview.component.html
@@ -25,7 +25,7 @@
             </div>
 
             <button routerLink="./newtask" class="circle-add-button button is-primary">
-                <img src="../../../assets/plus-icon.svg">
+                <i class="fas fa-plus"></i>
             </button>
         </div>
     </div>
