commented angular animation routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<router-outlet></router-outlet>
-<!-- <taskview></taskview> -->
+
+<!-- <div [@routeAnimation]="prepareRoute(outlet)"> -->
+    <router-outlet></router-outlet>
+<!-- </div> -->
