--- a/src/app/pages/taskview/taskview.component.scss
+++ b/src/app/pages/taskview/taskview.component.scss
@@ -6,6 +6,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    //padding: 35px;
 }
 .task-manager-container {
     display: flex;
