--- a/src/app/pages/new-list/new-list.component.html
+++ b/src/app/pages/new-list/new-list.component.html
@@ -6,7 +6,7 @@
         <input #listTitleInputs class="input has-background-light is-medium" type="text" placeholder="Enter List name">
         <br><br>
         <div class="buttons is-right">
-            <button routerLink="/" class="button is-medium">Cancel</button>
+            <button routerLink="/" class="button is-medium" (click)="onCancelClick()">Cancel</button>
             <button routerLink="/" class="button is-primary has-text-white is-medium" (click)="createList(listTitleInputs.value)">Create</button>
         </div>
     </div>
