--- a/src/main-styles.scss
+++ b/src/main-styles.scss
@@ -1,6 +1,7 @@
 // this is where we change variables for global styles
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Nunito:wght@400;700&display=swap');
+@import '~ngx-toastr/toastr';
 
 $torquoise: #E2A8FE;
 $green: #7E4EAC;
@@ -33,7 +34,10 @@ html, body{
     align-items: center;
     width: 100%;
     height: 100%;
-    // padding: 220px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .modal-box {
@@ -43,4 +47,10 @@ html, body{
     background: white;
     border-radius: 5px;
     padding: 35px;
+}
+
+@media(max-width: 500px){
+    .modal-box {
+        width: auto;
+    }
 }
