--- a/src/app/pages/taskview/taskview.component.scss
+++ b/src/app/pages/taskview/taskview.component.scss
@@ -35,6 +35,7 @@
     text-transform: uppercase;
     letter-spacing: 2px;
 }
+
 .list-menu {
     display: flex;
     flex-direction: column;
@@ -137,6 +138,24 @@
         max-height: 100%;
     }
 
+    .modal-card {
+        padding: 15px;
+    }
+
+    .modal-title {
+        font-size: 30px;
+        text-align: center;
+        background-color: #7E4EAC;
+        padding: 5px;
+        border-top-left-radius: 6px; 
+        border-top-right-radius: 6px;
+        margin: 0px;
+        font-family: 'Lato';
+        font-size: 24px;
+        text-transform: uppercase;
+        letter-spacing: 2px;
+    }
+
     .title {
         font-size: 30px;
         text-align: center;
@@ -153,5 +172,9 @@
         color: white !important;
     }
 
-    
+    .modal-card-foot {
+        padding: 8px;
+        justify-content: right;
+    }
+
 }
